--- a/index.html
+++ b/index.html
@@ -24,10 +24,6 @@
         <link rel="stylesheet" type="text/css" href="assets/css/theme.css">
 
 
-        <!--[if lt IE 9]>
-        <script src="assets/plugins/iesupport/html5shiv.js"></script>
-        <script src="assets/plugins/iesupport/respond.js"></script>
-        <![endif]-->
     </head>
     <body id="home">
 
@@ -128,40 +124,36 @@
 
               <div class="footer-left">
 
-                <h3>Dream<span>Creations</span></h3>
+                <h3>Dream<span>creations.</span></h3>
 
                 <p class="footer-links">
                   <a href="#">Home</a>
                   ·
-                  <a href="#">Blog</a>
-                  ·
-                  <a href="#">Pricing</a>
-                  ·
                   <a href="#">About</a>
                   ·
-                  <a href="#">Faq</a>
+                  <a href="#">Gallery</a>
                   ·
                   <a href="#">Contact</a>
                 </p>
 
-                <p class="footer-company-name">Company Name &copy; 2015</p>
+                <p class="footer-company-name"> Dreamcreations&copy; 2015</p>
               </div>
 
               <div class="footer-center">
 
                 <div>
                   <i class="fa fa-map-marker"></i>
-                  <p><span>21 Revolution Street</span> Paris, France</p>
+                  <p><span>205/6 Emmause lane. </span> labone,Accra.</p>
                 </div>
 
                 <div>
                   <i class="fa fa-phone"></i>
-                  <p>+1 555 123456</p>
+                  <p>+233506513861</p>
                 </div>
 
                 <div>
                   <i class="fa fa-envelope"></i>
-                  <p><a href="mailto:support@company.com">support@company.com</a></p>
+                  <p><a href="mailto:support@company.com">dreamcreations65@gmail.com</a></p>
                 </div>
 
               </div>
@@ -170,15 +162,15 @@
 
                 <p class="footer-company-about">
                   <span>About the company</span>
-                  Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+                  Dreamcreations was started with the remit to plan and produce the most creative 
+                 high-end events and much more.
                 </p>
 
                 <div class="footer-icons">
 
                   <a href="#"><i class="fa fa-facebook"></i></a>
                   <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
+                  <a href="#"><i class="fa fa-instagram"></i></a>
 
                 </div>
 
