--- a/about-us.html
+++ b/about-us.html
@@ -11,6 +11,9 @@
         <link rel="stylesheet" type="text/css" href="assets/plugins/bootstrap-select-1.10.0/dist/css/bootstrap-select.min.css">
         <!-- Fonts Css -->
         <link rel="stylesheet" type="text/css" href="assets/plugins/font-awesome-4.6.1/css/font-awesome.min.css">
+
+        <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+
         <link rel="stylesheet" type="text/css" href="assets/plugins/font-elegant/elegant.css">
         <!-- OwlCarousel2 Slider Css -->
         <link rel="stylesheet" type="text/css" href="assets/plugins/owl.carousel.2/assets/owl.carousel.css">
@@ -23,10 +26,6 @@
         <link rel="stylesheet" type="text/css" href="assets/css/theme.css">
 
 
-        <!--[if lt IE 9]>
-        <script src="assets/plugins/iesupport/html5shiv.js"></script>
-        <script src="assets/plugins/iesupport/respond.js"></script>
-        <![endif]-->
     </head>
     <body id="home">
 
@@ -143,7 +142,70 @@
                                     
                                 </ul>
                                 <div class="pad-30"></div>
-                            </div>                     
+                            </div>
+
+
+            <!-- Footer -->
+            <footer class="footer-distributed">
+
+              <div class="footer-left">
+
+                <h3>Dream<span>creations.</span></h3>
+
+                <p class="footer-links">
+                  <a href="#">Home</a>
+                  ·
+                  <a href="#">About</a>
+                  ·
+                  <a href="#">Gallery</a>
+                  ·
+                  <a href="#">Contact</a>
+                </p>
+
+                <p class="footer-company-name"> Dreamcreations&copy; 2015</p>
+              </div>
+
+              <div class="footer-center">
+
+                <div>
+                  <i class="fa fa-map-marker"></i>
+                  <p><span>205/6 Emmause lane. </span> labone,Accra.</p>
+                </div>
+
+                <div>
+                  <i class="fa fa-phone"></i>
+                  <p>+233506513861</p>
+                </div>
+
+                <div>
+                  <i class="fa fa-envelope"></i>
+                  <p><a href="mailto:support@company.com">dreamcreations65@gmail.com</a></p>
+                </div>
+
+              </div>
+
+              <div class="footer-right">
+
+                <p class="footer-company-about">
+                  <span>About the company</span>
+                  Dreamcreations was started with the remit to plan and produce the most creative 
+                 high-end events and much more.
+                </p>
+
+                <div class="footer-icons">
+
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-instagram"></i></a>
+
+                </div>
+
+              </div>
+
+            </footer>
+
+
+
 
 			
 			
