--- a/contactus.html.html
+++ b/contactus.html.html
@@ -16,6 +16,8 @@
         <!-- OwlCarousel2 Slider Css -->
         <link rel="stylesheet" type="text/css" href="assets/plugins/owl.carousel.2/assets/owl.carousel.css">
 
+         <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+
 
         <!-- Animate Css -->       
         <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
@@ -204,7 +206,67 @@
             </div>
             <a href="javascript:void(0)" class="close-search"><i class="fa fa-close"></i></a>
         </div>
-        <!-- / Search Popup -->
+        <!-- / Search Popup -->  <footer class="footer-distributed">
+
+              <div class="footer-left">
+
+                <h3>Dream<span>creations.</span></h3>
+
+                <p class="footer-links">
+                  <a href="#">Home</a>
+                  ·
+                  <a href="#">About</a>
+                  ·
+                  <a href="#">Gallery</a>
+                  ·
+                  <a href="#">Contact</a>
+                </p>
+
+                <p class="footer-company-name"> Dreamcreations&copy; 2015</p>
+              </div>
+
+              <div class="footer-center">
+
+                <div>
+                  <i class="fa fa-map-marker"></i>
+                  <p><span>205/6 Emmause lane. </span> labone,Accra.</p>
+                </div>
+
+                <div>
+                  <i class="fa fa-phone"></i>
+                  <p>+233506513861</p>
+                </div>
+
+                <div>
+                  <i class="fa fa-envelope"></i>
+                  <p><a href="mailto:support@company.com">dreamcreations65@gmail.com</a></p>
+                </div>
+
+              </div>
+
+              <div class="footer-right">
+
+                <p class="footer-company-about">
+                  <span>About the company</span>
+                  Dreamcreations was started with the remit to plan and produce the most creative 
+                 high-end events and much more.
+                </p>
+
+                <div class="footer-icons">
+
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-instagram"></i></a>
+
+                </div>
+
+              </div>
+
+            </footer>
+                   
+
+
+
 
         <!-- Main Jquery JS -->
         <script src="assets/js/jquery-2.2.4.min.js" type="text/javascript"></script>    
