--- a/gallery.html.html
+++ b/gallery.html.html
@@ -15,8 +15,8 @@
         <!-- OwlCarousel2 Slider Css -->
         <link rel="stylesheet" type="text/css" href="assets/plugins/owl.carousel.2/assets/owl.carousel.css">
 
-
-        <!-- Animate Css -->       
+        <link rel="stylesheet" type="text/css" href="assets/css/footer.css">
+  <!-- Animate Css -->       
         <link rel="stylesheet" type="text/css" href="assets/css/animate.css">
 
         <!-- Main Css -->
@@ -152,7 +152,67 @@
                                     
                                 </ul>
                                 <div class="pad-30"></div>
-                </div>                     
+                </div>  
+
+
+            <footer class="footer-distributed">
+
+              <div class="footer-left">
+
+                <h3>Dream<span>creations.</span></h3>
+
+                <p class="footer-links">
+                  <a href="#">Home</a>
+                  ·
+                  <a href="#">About</a>
+                  ·
+                  <a href="#">Gallery</a>
+                  ·
+                  <a href="#">Contact</a>
+                </p>
+
+                <p class="footer-company-name"> Dreamcreations&copy; 2015</p>
+              </div>
+
+              <div class="footer-center">
+
+                <div>
+                  <i class="fa fa-map-marker"></i>
+                  <p><span>205/6 Emmause lane. </span> labone,Accra.</p>
+                </div>
+
+                <div>
+                  <i class="fa fa-phone"></i>
+                  <p>+233506513861</p>
+                </div>
+
+                <div>
+                  <i class="fa fa-envelope"></i>
+                  <p><a href="mailto:support@company.com">dreamcreations65@gmail.com</a></p>
+                </div>
+
+              </div>
+
+              <div class="footer-right">
+
+                <p class="footer-company-about">
+                  <span>About the company</span>
+                  Dreamcreations was started with the remit to plan and produce the most creative 
+                 high-end events and much more.
+                </p>
+
+                <div class="footer-icons">
+
+                  <a href="#"><i class="fa fa-facebook"></i></a>
+                  <a href="#"><i class="fa fa-twitter"></i></a>
+                  <a href="#"><i class="fa fa-instagram"></i></a>
+
+                </div>
+
+              </div>
+
+            </footer>
+                   
 
 
             <!-- Footer -->
